modifited webpage to be about pups

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Puppies</title>
 </head>
+
 <body>
-<h1>Hello world</h1>
+<h1>Pups</h1>
+<p>Pups are bundles of joy. <em> They are very small!!!</em> It is important to remember <strong>to give pups lots of belly rubs.</strong></p>
+<h2>Great things about pups</h2>
+  <ul>
+    <li><a href = "https://www.google.com/search?q=puppy+tummy&espv=2&biw=1123&bih=705&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjT1dzEvf3NAhWDRiYKHQRKAa8Q_AUIBigB" > Round chubby tummies </a></li>
+    <li>Very silly</li>
+    <li>Fall asleep anywhere</li>
+    <li>So small!!!</li>
+  </ul>
+<h2>My pups</h2>
+  <ol>
+    <li><em>ZuZu</em> 15 year old Shih-tzu pup </li>
+    <li><em>Nellie</em> 17 (!!!) year old Shih-tzu pup </li>
+  </ol>
 </body>
+
 </html>
