Added another table with Things to do. Table has 4 columns (date + time, Thing, and Location). Added 3 Things (rows) to the table.

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -27,5 +27,32 @@
     <td>Sephora or Target</td>
   </tr>
 </table>
+
+<h1>Things to do</h1>
+<table border=1>
+  <tr>
+    <th colspan="2">Date + time</th>
+    <th>Thing</th>
+    <th>Location</th>
+  </tr>
+  <tr>
+    <td rowspan="2">Wednesday</td>
+    <td>3:30cdt</td>
+    <td>GPS</td>
+    <td>Google Hangouts</td>
+  </tr>
+  <tr>
+    <td>By end of day</td>
+    <td>Cultural Discussion</td>
+    <td>Canvas</td>
+  </tr>
+  <tr>
+    <td>Thursday</td>
+    <td>3:00cdt</td>
+    <td>View Apartment</td>
+    <td>East Lakeview</td>
+  </tr>
+
+</table>
 </body>
 </html>
