created a rate this webpage form

--- a/html/forms/practice-form.html
+++ b/html/forms/practice-form.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Do you like this webpage?</title>
 </head>
 <body>
-
+<form name="Submit" action="success.html" method="post">
+  <fieldset>
+    <div>
+      <label>Your name:</label>
+      <input type="text" name="fullname">
+    </div>
+    <div>
+      <label>Email:</label>
+      <input type="email" name="email">
+    </div>
+    <div>
+      <label>Date:</label>
+      <input type="date" name="date">
+    </div>
+  </fieldset>
+  <fieldset>
+  <div>
+      <label>Rate this website:</label>
+      <select name="rating">
+        <option value="rate">1</option>
+        <option value="rate">2</option>
+        <option value="rate">3</option>
+      </select>
+    </div>
+    <div>
+      <textarea name="comments" rows="10" cols="50">Write your comments</textarea>
+    </div>
+    </fieldset>
+ <button type="Submit">Rate the site!</button> 
+</form>
 </body>
 </html>
