Edit html to include reflection comment. Edit cssto create two column style with a header and footer.

--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -276,6 +276,6 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!-- I definitely feel more confident with css positioning. Especially after Katy explained why sometimes haveing your percentages add up to 100% doesnt work- that helped a lot and will help me for repositioning in the future. I also feel pretty well with my learning competencies in general, overall I thought this GPS went well :)  -->
   </body>
 </html>
