--- a/web_dev/client_side_js/index.html
+++ b/web_dev/client_side_js/index.html
@@ -3,18 +3,18 @@
 <TITLE>Your Title Here</TITLE>
 </HEAD>
 <BODY BGCOLOR="FFFFFF">
-<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
 <a href="http://somegreatsite.com">Link Name</a>
 is a link to another nifty site
 <H1>This is a Header</H1>
-<H2>This is a Medium Header</H2>
+<H2 id = "header">This is a Medium Header</H2>
 Send me mail at <a href="mailto:support@yourcompany.com">
 support@yourcompany.com</a>.
 <P> This is a new paragraph!
 <P> <B>This is a new paragraph!</B>
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
-<img src="http://cdn2-www.dogtime.com/assets/uploads/gallery/30-impossibly-cute-puppies/impossibly-cute-puppy-8.jpg">
+<img id = "puppy" src="puppy.jpg">
 <HR>
+<script src="dom.js"></script>
 </BODY>
 </HTML>
