include jQuery and javascript file in HTML file

--- a/web_dev/jquery/testing/index.html
+++ b/web_dev/jquery/testing/index.html
@@ -26,5 +26,7 @@
   <p>This is a cute puppy, though.</p>
 </main>
 
+<script src= "jquery-1.11.0.js"></script>
+<script src= "script.js"></script>
 </body>
 </html>
