Move pictures to subfolder

--- a/web_dev/jquery/testing/index.html
+++ b/web_dev/jquery/testing/index.html
@@ -22,7 +22,11 @@
   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   <p>This is an ugly webpage, i've somehow forgotten everything about html+css OTL</p>
-  <img src="puppy.jpg" width="600">
+  <img src="pictures/puppy.jpg">
+  <img src="pictures/puppy2.jpg">
+  <img src="pictures/puppy3.jpg">
+  
+
   <p>This is a cute puppy, though.</p>
 </main>
 
