Add all puppy pictures to index

--- a/web_dev/jquery/testing/index.html
+++ b/web_dev/jquery/testing/index.html
@@ -25,7 +25,9 @@
   <img src="pictures/puppy.jpg">
   <img src="pictures/puppy2.jpg">
   <img src="pictures/puppy3.jpg">
-  
+  <img src="pictures/puppy4.jpg">
+  <img src="pictures/puppy5.jpg">
+  <img src="pictures/puppy6.jpg">
 
   <p>This is a cute puppy, though.</p>
 </main>
