--- a/web_dev/jquery/testing/index.html
+++ b/web_dev/jquery/testing/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <title>bleep bloop</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
 <header>
-  <h1>This is a header</h1>
+  <h1>THIS IS A HEADER</h1>
   <ul>
     <li><a href="google.com">google</a></li>
     <li><a href="yahoo.com">yahoo</a></li>
@@ -29,7 +30,7 @@
   <img src="pictures/puppy5.jpg">
   <img src="pictures/puppy6.jpg">
 
-  <p>This is a cute puppy, though.</p>
+  <p>These are some cute puppies, though :) </p>
 </main>
 
 <script src= "jquery-1.11.0.js"></script>
