--- a/web_dev/jquery/testing/index.html
+++ b/web_dev/jquery/testing/index.html
@@ -14,23 +14,33 @@
   </ul> 
 </header>
 <main>
-  <h2>Here's a section in the main</h2>
-  <p>bleepbloopbloopbleepbloop </p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <p>This is an ugly webpage, i've somehow forgotten everything about html+css OTL</p>
-  <img src="pictures/puppy.jpg">
-  <img src="pictures/puppy2.jpg">
-  <img src="pictures/puppy3.jpg">
-  <img src="pictures/puppy4.jpg">
-  <img src="pictures/puppy5.jpg">
-  <img src="pictures/puppy6.jpg">
+  <section id="not-puppies">
+    <h2>Here's a section in the main</h2>
+    <p>bleepbloopbloopbleepbloop </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>This is an ugly webpage, i've somehow forgotten everything about html+css 
+    <br>GOTTA REFRESH !!!! >:0 </p>
+  </section>
 
-  <p>These are some cute puppies, though :) </p>
+  <section id="puppies">
+    <h2>Puppies</h2>
+    <p>These are some cute puppies, though :)</p> 
+    <button id="show-only-pups"> click here to only show the pups #woof </button>
+
+    <img src="pictures/puppy.jpg">
+    <img src="pictures/puppy2.jpg">
+    <img src="pictures/puppy3.jpg">
+    <img src="pictures/puppy4.jpg">
+    <img src="pictures/puppy5.jpg">
+    <img src="pictures/puppy6.jpg">
+  </section>
+
+  
 </main>
 
 <script src= "jquery-1.11.0.js"></script>
